--- a/website/templates/users/ai_info.html
+++ b/website/templates/users/ai_info.html
@@ -9,7 +9,7 @@
           <div class="col 8">
               <h3>AI/Tokens</h3>
                 <p>
-                    To access you AI Assistant Jeffrey, you will need to use tokens.
+                    To access your AI Assistant Jeffrey, you will need to use tokens.
                     Tokens can be spent for various services including getting a customized cover
                     letter for your job application or obtaining expert suggestions and revisions for your resume.
                 </p>
