--- a/website/templates/inner-header.html
+++ b/website/templates/inner-header.html
@@ -47,7 +47,8 @@
         <ul>
           <li><a class="nav-link scrollto active" href="{% url 'home' %}">Home</a></li>
           <li><a class="nav-link scrollto" href="{% url 'home' %}#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="{% url 'home' %}#recruiter">Recruiter</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'job_seeker' %}">Job Seekers</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'business_recruiter' %}">Business/Recruiter</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
