--- a/website/templates/user_navbar.html
+++ b/website/templates/user_navbar.html
@@ -2,7 +2,7 @@
   <nav class="profile-navbar navbar navbar-expand-lg">
     <div class="container-fluid">
       <!-- Toggler button for mobile devices -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler mt-5" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
