Remove new tab opening for registration links
Removed the 'target="_blank"' attribute from the 'register' links in both the 'job_seekers.html' and 'business_recruiter.html' templates. This change ensures that when users click on "Create User Page" or "Add Job Listing", they are not directed to a new browser tab.

--- a/website/templates/job_seekers.html
+++ b/website/templates/job_seekers.html
@@ -41,7 +41,7 @@
                     <div class="text-center">
                         <h5>What are you waiting for</h5>
                         <button type="button" class="btn btn-warning">
-                            <a href="{% url 'register' %}" target="_blank" style="color: black;">Create User Page</a>
+                            <a href="{% url 'register' %}" style="color: black;">Create User Page</a>
                         </button>
                     </div>
                 </div>
