--- a/website/templates/business_recruiter.html
+++ b/website/templates/business_recruiter.html
@@ -36,7 +36,7 @@
                     <div class="text-center">
                         <h5>What are you waiting for</h5>
                         <button type="button" class="btn btn-warning">
-                            <a href="{% url 'register' %}" target="_blank" style="color: black;">Add Job Listing</a>
+                            <a href="{% url 'register' %}" style="color: black;">Add Job Listing</a>
                         </button>
                     </div>
                 </div>
