--- a/website/templates/edit_personalinfo.html
+++ b/website/templates/edit_personalinfo.html
@@ -16,6 +16,12 @@
                     </div>
                 </div>
                 {% endif %}
+                <div class="alert alert-warning" role="alert">
+                    If you want your resume searchable; make sure to choose active.
+                </div>
+                <div class="mb-3">
+                    Active {{ form.active }}
+                </div>
                 <div class="row g-3 mb-3">
                     <div class="col-md-6">
                         {{ form.first_name }}
