--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -29,7 +29,7 @@
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 </head>
 <body>
-  <!-- ======= Header ======= -->
+  <!-- Header -->
   <header id="header" class="fixed-top ">
       <div class="container d-flex align-items-center justify-content-lg-between">
           <h1 class="logo me-auto me-lg-0"><a href="{% url 'home' %}">Tech Artisan Hub<span>.</span></a></h1>
